Fix scrollbar issue on report page

--- a/admin/webUI/assets/css/custom.css
+++ b/admin/webUI/assets/css/custom.css
@@ -594,7 +594,7 @@ body.home {
 .sticky-sidebar .sticky-sidebar-content {
   position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 95vh;
   overflow-y: auto;
   background: #f5f7f9;
 }
